--- a/data/en/tips/2-trekking.yml
+++ b/data/en/tips/2-trekking.yml
@@ -62,7 +62,7 @@ source:
 
   - icon: fa fa-bed
     number: 14
-    description: Of course there's no healing in mountain lodges neither. The only source of warm is somewhat of a stove located in the <b>common dining area</b> around which you can even lay your clother to dry. This is the perfect place to sit with a cup of hot tea and have a chat with other trekkers before slipping in your sleeping bag.
+    description: Of course there's no healing in mountain <b>lodges</b> neither. The only source of warm is somewhat of a stove located in the common dining area around which you can even lay your clother to dry. This is the perfect place to sit with a cup of hot tea and have a chat with other trekkers before slipping in your sleeping bag.
 
   - icon: fa fa-bed
     number: 15
