--- a/data/en/tips/3-transport.yml
+++ b/data/en/tips/3-transport.yml
@@ -22,7 +22,7 @@ source:
 
   - icon: fa fa-bus
     number: 6
-    description: <a href="http://greenline.com.np/" target="_blank"><b>Greenline<b></a> is the most known private bus company especially for the Kathmandu-Pokhara trait. This trip costs $50pp a/r. It takes 7 to 8 hours to get from Katmandu to Pokhara (or vice versa) but they stop in a clean place for lunch (included in the price).<br> <a href="https://osm.org/go/zrWczLYmT?m=" targer="_blank">Here</a>'s Greenline office in Kathmandu. It's not easy to find, so eyes open.<br> <a href="https://osm.org/go/zsqLcnxs7?m=" targer="_blank">Here</a>'s the one in Pokhara.
+    description: <a href="http://greenline.com.np/" target="_blank"><b>Greenline</b></a> is the most known private bus company especially for the Kathmandu-Pokhara trait. This trip costs $50pp a/r. It takes 7 to 8 hours to get from Katmandu to Pokhara (or vice versa) but they stop in a clean place for lunch (included in the price).<br> <a href="https://osm.org/go/zrWczLYmT?m=" targer="_blank">Here</a>'s Greenline office in Kathmandu. It's not easy to find, so eyes open.<br> <a href="https://osm.org/go/zsqLcnxs7?m=" targer="_blank">Here</a>'s the one in Pokhara.
 
   - icon: fa fa-bus
     number: 7
