--- a/data/it/tips/3-transport.yml
+++ b/data/it/tips/3-transport.yml
@@ -22,7 +22,7 @@ source:
 
   - icon: fa fa-bus
     number: 6
-    description:  <a href="http://greenline.com.np/" target="_blank"><b>Greenline<b></a> è la compagnia di bus privati più conosciuta, specialmente per la tratta Kathmandu-Pokhara. Il costo è di $50 a persona a/r. Ci impiega dalle 7 alle 8 ore per andare da Katmandu a Pokhara (o vice versa). Incluso nel prezzo c'è il pranzo a buffet in un resort di proprietà di Greenline.<br> <a href="https://osm.org/go/zrWczLYmT?m=" targer="_blank">Qui</a> c'è il loro ufficio a Kathmandu. Occhi aperti perchè non è facile trovarlo.<br> <a href="https://osm.org/go/zsqLcnxs7?m=" targer="_blank">Questo</a> invece è l'ufficio Greenline a Pokhara.
+    description: <a href="http://greenline.com.np/" target="_blank"><b>Greenline</b></a> è la compagnia di bus privati più conosciuta, specialmente per la tratta Kathmandu-Pokhara. Il costo è di $50 a persona a/r. Ci impiega dalle 7 alle 8 ore per andare da Katmandu a Pokhara (o vice versa). Incluso nel prezzo c'è il pranzo a buffet in un resort di proprietà di Greenline.<br> <a href="https://osm.org/go/zrWczLYmT?m=" targer="_blank">Qui</a> c'è il loro ufficio a Kathmandu. Occhi aperti perchè non è facile trovarlo.<br> <a href="https://osm.org/go/zsqLcnxs7?m=" targer="_blank">Questo</a> invece è l'ufficio Greenline a Pokhara.
 
   - icon: fa fa-bus
     number: 7
