--- a/config.toml
+++ b/config.toml
@@ -33,11 +33,14 @@ enableRobotsTXT = true
   description = "Nepal all you need to know"
 
   # Custom assets can be linked with their paths relative to static/
-  custom_css = [ "css/main.css" ]
+  custom_css = []
   custom_js  = [ "js/main.js" ]
   metadata_allowed_blog = [ "in-depth", "approfondimenti" ]
-  theme_color = "#CB2E40"
   amazon_affiliate = "true"
+
+[params.theme]
+  main_color = "#CB2E40"
+  main_color_hover = "#A32534"
 
 [params.authorAlessandro]
   name = "Alessandro"
