--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://nepal.allyouneedtoknow.tips/"
-# theme = "hugo-sustain"
+theme = "hugo-sustain-ayntk"
 defaultContentLanguage = "en"
 languageCode = "en-US"
 title = "Nepal all you need to know"
@@ -34,7 +34,7 @@ enableRobotsTXT = true
 
   # Custom assets can be linked with their paths relative to static/
   custom_css = []
-  custom_js  = [ "js/main.js" ]
+  custom_js  = []
   metadata_allowed_blog = [ "in-depth", "approfondimenti" ]
   amazon_affiliate = "true"
 
