--- a/data/en/tips/1-general.yml
+++ b/data/en/tips/1-general.yml
@@ -81,7 +81,12 @@ source:
 
   - icon: fa fa-paw
     number: 19
-    description: Streets are oh-so full of stray dogs. People don't usually keep dogs as pets because they're seen as reincarnations of bad people by Hindu. That's why they're abandoned. Some stray dog will probably follow you at some point.
+    description: >
+    Streets are oh-so full of stray dogs. Some stray dog will probably even follow you at some point. People don't usually keep dogs as pets and reasons for that are uncertain:
+      <br> - because they're seen as reincarnations of bad people by Hindu;
+      <br> - because they're impure, evil, which seems to be an influence by the Islamic Rule of India;
+      <br> - because, religiously speaking, they act as a guard in hell, so they're seen under this evil light.
+      <br> However, Hindi say they do not actually hate or avoid dogs, so it is probably just a matter of overcrowd and uncontrolled reproduction. 
     
   - icon: fa fa-child
     number: 20
