--- a/data/it/tips/1-general.yml
+++ b/data/it/tips/1-general.yml
@@ -81,7 +81,12 @@ source:
 
   - icon: fa fa-paw
     number: 19
-    description: Le strade sono piene di cani randagi. I nepalesi non considerano i cani come animali domestici, perchè nell'indusimo si crede siano la reincarnazione di persome malvage. Ad un certo punto del vostro viaggio, vi ritroverete sicuramente seguiti da almeno uno di loro.
+    description: >
+    Le strade sono piene di cani randagi tanto che ad un certo punto del vostro viaggio, vi ritroverete sicuramente seguiti da almeno uno di loro. I nepalesi non considerano i cani come animali domestici, e le ragioni di questo fatto non sono certe:
+    <br> - perchè nell'indusimo si crede siano la reincarnazione di persome malvage;
+    <br> - perchè sono considerati impuri, la quale sembra essere un'influenza della cultura Islamica indiana;
+    <br> - perchè nell'immaginario religioso i cani sono i guardiani dell'inferno.
+    <br> Ad ogni modo, gli induisti sostengono che questo loro odio verso i cani non sia reale e sia solo una leggenda, quindi non si esclude che la situazione dei cani randagi sia semplicemente dovuta ad un sovraffollamento e ad una riproduzione non controllata.
 
   - icon: fa fa-child
     number: 20
