--- a/data/it/tips/1-general.yml
+++ b/data/it/tips/1-general.yml
@@ -77,12 +77,12 @@ source:
 
   - icon: fa fa-warning
     number: 18
-    description: Le mucche sono animali sacri, quindi non possono essere nè uccise nè mangiate. E' abbastanza frequente incontrarne qualcuna che vaga libera a Kathmandu.
+    description: Le mucche sono animali sacri, quindi non possono essere nè uccise nè mangiate. È abbastanza frequente incontrarne qualcuna che vaga libera a Kathmandu.
 
   - icon: fa fa-paw
     number: 19
     description: >
-      Le strade sono piene di cani randagi tanto che ad un certo punto del vostro viaggio, vi ritroverete sicuramente seguiti da almeno uno di loro. I nepalesi non considerano i cani come animali domestici, e le ragioni di questo fatto non sono certe:
+      Le strade sono piene di cani randagi tanto che a un certo punto del vostro viaggio, vi ritroverete sicuramente seguiti da almeno uno di loro. I nepalesi non considerano i cani come animali domestici, e le ragioni di questo fatto non sono certe:
       <br> - perchè nell'indusimo si crede siano la reincarnazione di persone malvage;
       <br> - perchè sono considerati impuri, la quale sembra essere un'influenza della cultura Islamica indiana;
       <br> - perchè nell'immaginario religioso i cani sono i guardiani dell'inferno.
